# TokenSpawner

./: .env.example  .gitignore  Anchor.toml  README.md  package.json
programs/fee-collector/: Cargo.toml  es7UF6D7osE8tyXYiyD38xpBuMgMwUvBbkJVoAspawn.json
programs/fee-collector/src/: lib.rs
src/: distribute.js
