[package]
name = "fee-collector"
version = "0.1.0"
description = "Token Spawner Fee Collector - On-chain program for collecting Pump Fun creator fees"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fee_collector"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
